tests/ui/contracts/error/item-is-not-a-function.rs
use http_tracing_attributes::contracts;

#[contracts]
struct S;

fn main() {}
