tests/ui/contracts/error/item-is-not-a-function.stderr
error: item is not a function

         = help: `#[contracts]` can only be used on functions

 --> tests/ui/contracts/error/item-is-not-a-function.rs:4:1
  |
4 | struct S;
  | ^^^^^^^^^
